# Curso_ML_pronostico_hidrologico

./: LICENSE  README.md  pyproject.toml
notebooks/: 1_Satellite_precipitation.ipynb  2_ML_modelling.ipynb
